src/test/deca/context/invalid/pierre/objects/overrideWrongSig2.deca
class A {
    int method(int i) {}
}
class B extends A {
    float method(int i) {}
}
{}
